get cinema details
