# docs/swagger.yaml
@@ -30,6 +30,36 @@ paths:
       summary: Check otp with phone number, return jwt token
       tags:
       - Auth service
+  /api/v1/cinema/{id}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: cinema id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ""
+      summary: GetCinemaById
+      tags:
+      - Cinema service
+  /api/v1/cinemas:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ""
+      summary: ListAllCinemas
+      tags:
+      - Cinema service
   /api/v1/films:
     get:
       consumes:
